--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         <ul>
           <li><a href="#">À Propos</a></li>
             <li>
-                <a href="#">Modèles</a>
+                <a href="#Modèles Disponibles">Modèles Disponibles</a>
             </li>
             <li>
-                <a href="#">Avis</a>
+              <a href="#Nos Valeurs"> Nos Valeurs</a>
+            </li>
+            <li>
+                <a href="#Avis">Avis</a>
             </li>
         </ul>
         <div class="avatar">
@@ -30,7 +33,7 @@
       <header>
               <a href="#" id="principal_title" class="buttons-primary" target="_blank">Vivez l'aventure sans limites : Trouvez la voiture parfaite pour votre prochain voyage.</a>
       </header>
-      <main>
+      <main id="Modèles Disponibles">
         <h1>Modèles Disponibles</h1>
         <section id="cards">
           <div class="card">
@@ -70,6 +73,7 @@
         <a href="#" class="fixed-whatsapp " target="_blank">
             <img src="assets/whatsapp.png" alt="whatsapp">
         </a>
+        <main id="Nos Valeurs">
         <h1>NOS VALEURS</h1>
             <section id="valeurs_mod">
               <div class="valeurs_review">
@@ -84,7 +88,8 @@
               <p>Nous nous engageons à offrir un service client irréprochable, priorisant votre satisfaction.</p>
             </div>
             </section>
-        <h1>AVIS</h1>                                 <section id="review_section">
+          </main>
+        <h1 id="Avis">AVIS</h1>                                 <section id="review_section">
               <div class="card_review">
                 <div class="review"> <h4>Ahmed</h4>
           <div class="stars_card">
