--- a/index.html
+++ b/index.html
@@ -9,90 +9,87 @@
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <img src="assets/logo.svg" alt="logo MITCH">
-            <h4 id="mitch_nav">MITCH</h4>
-        </div>
+      <div class="logo">
+        <img src="assets/logo.svg" alt="logo MITCH">
+          <h4 id="mitch_nav">MITCH</h4>
+      </div>
         <ul>
           <li><a href="#">À Propos</a></li>
-            <li>
-                <a href="#Modèles Disponibles">Modèles Disponibles</a>
-            </li>
-            <li>
-              <a href="#Nos Valeurs"> Nos Valeurs</a>
-            </li>
-            <li>
-                <a href="#Avis">Avis</a>
-            </li>
+          <li><a href="#Modèles Disponibles">Modèles Disponibles</a></li>
+          <li><a href="#Nos Valeurs"> Nos Valeurs</a></li>
+          <li><a href="#Avis">Avis</a></li>
         </ul>
-        <div class="avatar">
+      <div class="avatar">
             <a href="#" class="buttons">Mon Panier</a>
             <img id="avatar" src="assets/avatarchimpunks.jpg" alt="avatar">
           </div>
     </nav>
-      <header>
-              <a href="#" id="principal_title" class="buttons-primary" target="_blank">Vivez l'aventure sans limites : Trouvez la voiture parfaite pour votre prochain voyage.</a>
-      </header>
+  <header>
+      <a href="#" id="principal_title" class="buttons-primary" target="_blank">Vivez l'aventure sans limites : Trouvez la voiture parfaite pour votre prochain voyage.</a>
+  </header>
       <main id="Modèles Disponibles">
-        <h1>Modèles Disponibles</h1>
-        <section id="cards">
-          <div class="card">
+      <h1>Modèles Disponibles</h1>
+  <section id="cards">
+        <div class="card">
             <img id="image" src="https://cdn.bipicar.com/specificvehicleplans/6225ef47c397f5c90a9654ef/vehicle-images/6364d867b694aff240f97e95_2022_11_04_10_16_23.png" alt="voiture 1">
-            <div class="card-container">
-              <div class="title-card">
-                <h2>audi</h2>
-                <h3>599€/mois</h3>
-              </div>
-              <p>Maniable et réactive, cette petite citadine est à l’aise en ville comme sur route. Louer une Audi A1 grise se révèle donc parfait pour accompagner un weekend, des vacances ou un déplacement professionnel.</p>
+        <div class="card-container">
+        <div class="title-card">
+      <h2>audi</h2>
+      <h3>599€/mois</h3>
+        </div>
+            <p>Maniable et réactive, cette petite citadine est à l’aise en ville comme sur route. Louer une Audi A1 grise se révèle donc parfait pour accompagner un weekend, des vacances ou un déplacement professionnel.</p>
               <a href="#" class="buttons">Ajouter au panier</a>
-            </div>
-          </div>
-          <div class="card">
+        </div>
+        </div>
+        <div class="card">
             <img id="image" src="https://cdn.bipicar.com/specificvehicleplans/652932c0cd35bb6b958fa361/vehicle-images/660ff08e1738aa89ada1f22f_2024_04_05_14_37_34.png" alt="voiture 2">
-            <div class="card-container">
-              <div class="title-card">
-                <h2>peugeot</h2>
-                <h3>590€/mois</h3>
-              </div>
-              <p>Maniable et réactive, cette petite citadine est à l’aise en ville comme sur route. Louer une Peugeot 208cr se révèle donc parfait pour accompagner un weekend, des vacances ou un déplacement professionnel.</p>
+        <div class="card-container">
+        <div class="title-card">
+      <h2>peugeot</h2>
+      <h3>590€/mois</h3>
+        </div>
+            <p>Maniable et réactive, cette petite citadine est à l’aise en ville comme sur route. Louer une Peugeot 208cr se révèle donc parfait pour accompagner un weekend, des vacances ou un déplacement professionnel.</p>
               <a href="#" class="buttons">Ajouter au panier</a>
-            </div>
-          </div>
-          <div class="card">
+        </div>
+        </div>
+        <div class="card">
             <img id="image" src="https://cdn.bipicar.com/specificvehicleplans/61e915287ed87e0089207b88/vehicle-images/624375fdf083c82b8ec78596_2022_03_29_23_11_25.png">
-            <div class="card-container">
-              <div class="title-card">
-                <h2>tesla</h2>
-                <h3>979€/mois</h3>
-              </div>
-              <p>Maniable et réactive, cette petite citadine est à l’aise en ville comme sur route. Louer une Tesla Model Y se révèle donc parfait pour accompagner un weekend, des vacances ou un déplacement professionnel.</p>
+        <div class="card-container">
+        <div class="title-card">
+      <h2>tesla</h2>
+      <h3>979€/mois</h3>
+        </div>
+            <p>Maniable et réactive, cette petite citadine est à l’aise en ville comme sur route. Louer une Tesla Model Y se révèle donc parfait pour accompagner un weekend, des vacances ou un déplacement professionnel.</p>
               <a href="#" class="buttons">Ajouter au panier</a>
-            </div>
-          </div>
-        </section>
-        <a href="#" class="fixed-whatsapp " target="_blank">
+        </div>
+        </div>
+  </section>
+            <a href="#" class="fixed-whatsapp " target="_blank">
             <img src="assets/whatsapp.png" alt="whatsapp">
-        </a>
-        <main id="Nos Valeurs">
-        <h1>NOS VALEURS</h1>
-            <section id="valeurs_mod">
-              <div class="valeurs_review">
-                <i class="fa-solid fa-hand-holding-heart"></i>
-                 <p>Nous garantissons des véhicules fiables, prêts à répondre à vos besoins, pour une expérience de conduite sereine.</p>
-              </div>
-               <div class="valeurs_review">
-                <i class="fa-solid fa-ear-listen"></i><p>Nous nous engageons à vous offrir un service client irréprochable, à l'écoute de vos besoins pour garantir votre satisfaction.</p>
-              </div>
-               <div class="valeurs_review">
-                <i class="fa-solid fa-handshake"></i>
+            </a>
+  <main id="Nos Valeurs">
+      <h1>NOS VALEURS</h1>
+  <section id="valeurs_mod">
+        <div class="valeurs_review">
+            <i class="fa-solid fa-hand-holding-heart"></i>
+             <p>Nous garantissons des véhicules fiables, prêts à répondre à vos besoins, pour une expérience de conduite sereine.</p>
+        </div>
+        <div class="valeurs_review">
+            <i class="fa-solid fa-ear-listen"></i><p>Nous nous engageons à vous offrir un service client irréprochable, à l'écoute de vos besoins pour garantir votre satisfaction.</p>
+        </div>
+        <div class="valeurs_review">
+            <i class="fa-solid fa-handshake"></i>
               <p>Nous nous engageons à offrir un service client irréprochable, priorisant votre satisfaction.</p>
-            </div>
-            </section>
-          </main>
-        <h1 id="Avis">AVIS</h1>                                 <section id="review_section">
-              <div class="card_review">
-                <div class="review"> <h4>Ahmed</h4>
-          <div class="stars_card">
+        </div>
+  </section>
+  </main>
+      <h1 id="Avis">AVIS</h1>                                 
+  <section id="review_section">
+        <div class="card_review">
+        <div class="avatar">
+            <img id="avatar_avis" src="assets/avatarloutre.jpg" alt="avatar">
+        <div class="review"> <h4>Ahmed</h4>
+        <div class="stars_card">
           <i class="fa-solid fa-car"></i> 
           <i class="fa-solid fa-car"></i>
           <i class="fa-solid fa-car"></i>
@@ -100,69 +97,75 @@
           <i class="fa-solid fa-car"></i>
         </div>
         </div>
+        </div>
           <p class="paragraphe">
             "Très bonne première expérience de location de voiture à Catane en Sicile. Aucun problème. Nous n'avons pas eu de mauvaise surprise concernant des surplus de facture. Je recommande sans hésiter!"
           </p>
         </div>
         <div class="card_review">
-          <div class="review"> <h4>Lois</h4>
-            <div class="stars_card">
+        <div class="avatar">
+            <img id="avatar_avis" src="assets/avatarelephant.jpg" alt="avatar">
+        <div class="review"> <h4>Lois</h4>
+        <div class="stars_card">
             <i class="fa-solid fa-car"></i> 
             <i class="fa-solid fa-car"></i>
             <i class="fa-solid fa-car"></i>
             <i class="fa-solid fa-car"></i>
             <i class="fa-solid fa-car"></i>
-          </div>
-          </div>
+        </div>
+        </div>
+        </div>
             <p class="paragraphe">
               "Service exceptionnel ! J'ai loué une voiture pour un week-end et j'ai été impressionné par la qualité du service. Voiture propre et bien entretenue, processus de réservation facile. Je recommande vivement MITCH !"
             </p>
-          </div>
-          <div class="card_review">
-            <div class="review"> <h4>Carl</h4>
+        </div>
+        <div class="card_review">
+        <div class="avatar">
+              <img id="avatar_avis" src="assets/avatarchien.jpg" alt="avatar">
+        <div class="review"> <h4>Carl</h4>
               <div class="stars_card">
               <i class="fa-solid fa-car"></i> 
               <i class="fa-solid fa-car"></i>
               <i class="fa-solid fa-car"></i>
               <i class="fa-solid fa-car"></i>
               <i class="fa-solid fa-car"></i>
-            </div>
-            </div>
+        </div>
+        </div>
+        </div>
               <p class="paragraphe">
                 "Expérience parfaite ! Personnel sympa, choix varié, prix compétitifs. Je reviendrai chez MITCH !"
               </p>
-            </div>
-            <div class="card_review">
-              <div class="review"> <h4>Amine</h4>
-                <div class="stars_card">
+        </div>
+        <div class="card_review">
+        <div class="avatar">
+                <img id="avatar_avis" src="assets/avatarchat.jpg" alt="avatar">
+        <div class="review"> <h4>Amine</h4>
+        <div class="stars_card">
                 <i class="fa-solid fa-car"></i> 
                 <i class="fa-solid fa-car"></i>
                 <i class="fa-solid fa-car"></i>
                 <i class="fa-solid fa-car"></i>
                 <i class="fa-solid fa-car"></i>
-              </div>
-              </div>
+        </div>
+        </div>
+        </div>
                 <p class="paragraphe">
                   "Service exceptionnel ! J'ai loué une voiture pour un week-end et j'ai été impressionné par la qualité du service.J'ai apprécié la variété de modèles de voitures disponibles et les tarifs compétitifs."
                 </p>
-              </div>
-        </section>
-        <footer>
-          <div>
-              <ul>
-                  <li>
-                    <img class="png" src="assets/imagesinsta.png" alt="logo insta">
-                  </li>
-                  <li>
-                      <img class="png" src="assets/tiktok.png" alt="logo tiktok">
-                  </li>
-              </ul>
-          </div>
-          <div>
+        </div>
+  </section>
+  <footer>
+        <div>
+          <ul>
+            <li><img class="png" src="assets/imagesinsta.png" alt="logo insta"></li>
+            <li><img class="png" src="assets/tiktok.png" alt="logo tiktok"></li>
+          </ul>
+        </div>
+        <div>
               <p>119 Boulevard de la République Paris 75019</p>
               <p>© 2024 MITCH</p>
-          </div>
-       </footer>
-   </main>
+        </div>
+  </footer>
+  </main>
 </body>
 </html>
