vraiment last update

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
           </ul>
         </div>
         <div>
-              <p>119 Boulevard de la République Paris 75019</p>
-              <p>© 2024 MITCH</p>
+              <p alt="Adresse 119 Boulevard de la République Paris 75011 ">119 Boulevard de la République Paris 75011</p>
+              <p alt="copyright MITCH">© 2024 MITCH</p>
         </div>
   </footer>
   </main>
