the real one update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header>
       <a href="#" id="principal_title" class="buttons-primary" target="_blank">Vivez l'aventure sans limites : Trouvez la voiture parfaite pour votre prochain voyage.</a>
   </header>
-      <main id="Modèles Disponibles">
+   <main id="Modèles Disponibles">
       <h1>Modèles Disponibles</h1>
   <section id="cards">
         <div class="card">
@@ -64,10 +64,8 @@
         </div>
         </div>
   </section>
-            <a href="#" class="fixed-whatsapp " target="_blank">
-            <img src="assets/whatsapp.png" alt="whatsapp">
-            </a>
-  <main id="Nos Valeurs">
+   </main>
+   <main id="Nos Valeurs">
       <h1>NOS VALEURS</h1>
   <section id="valeurs_mod">
         <div class="valeurs_review">
@@ -154,6 +152,9 @@
                 </p>
         </div>
   </section>
+    <a href="#" class="fixed-whatsapp " target="_blank">
+    <img src="assets/whatsapp.png" alt="whatsapp">
+    </a>
   <footer>
         <div>
           <ul>
@@ -162,8 +163,8 @@
           </ul>
         </div>
         <div>
-              <p alt="Adresse 119 Boulevard de la République Paris 75011 ">119 Boulevard de la République Paris 75011</p>
-              <p alt="copyright MITCH">© 2024 MITCH</p>
+              <p>119 Boulevard de la République Paris 75011</p>
+              <p>© 2024 MITCH</p>
         </div>
   </footer>
   </main>
